調版 右手已經凍僵 您橙子 我現在解析度是100% 要是在跑版 我就用我冰冷手握住你 來睡覺囉 還有好多功能沒用 餐廳照片勒?  我還要用現金流   訂餐有數量想改方式 還有一堆bug 現在只能靠銅鑼山扛霸子 jorden撐場了 解析度100% 字超小 你橙子大爺的 鳩咪

--- a/CEA101G5/.settings/org.eclipse.core.resources.prefs
+++ b/CEA101G5/.settings/org.eclipse.core.resources.prefs
@@ -2,5 +2,6 @@ eclipse.preferences.version=1
 encoding//WebContent/front-customer-end/customerorder/customerordercss.css=UTF-8
 encoding//WebContent/front-customer-end/foodorder/css/css.css=UTF-8
 encoding//WebContent/front-customer-end/foodorder/orderok/orderokcss.css=UTF-8
+encoding//WebContent/front-customer-end/front/css/css.css=UTF-8
 encoding//WebContent/front-customer-end/menu/css/css.css=UTF-8
 encoding/<project>=UTF-8
