--- a/CEA101G5/.settings/org.eclipse.core.resources.prefs
+++ b/CEA101G5/.settings/org.eclipse.core.resources.prefs
@@ -4,5 +4,6 @@ encoding//WebContent/front-customer-end/foodorder/css/css.css=UTF-8
 encoding//WebContent/front-customer-end/foodorder/orderok/orderokcss.css=UTF-8
 encoding//WebContent/front-customer-end/front/css/css.css=UTF-8
 encoding//WebContent/front-customer-end/menu/css/css.css=UTF-8
+encoding//WebContent/front-store-end/queue/queuePeriod/css/css.css=UTF-8
 encoding//WebContent/front-store-end/selectpage/css/css.css=UTF-8
 encoding/<project>=UTF-8
