Adding Back-End For Shop 1/100 QQ

--- a/CEA101G5/WebContent/WEB-INF/web.xml
+++ b/CEA101G5/WebContent/WEB-INF/web.xml
@@ -198,6 +198,15 @@
 	</servlet-mapping>
 	
 	<servlet>
+		<servlet-name>ProductCategoryServlet</servlet-name>
+		<servlet-class>com.productcategory.controller.ProductCategoryServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ProductCategoryServlet</servlet-name>
+		<url-pattern>/shop/productcategory.do</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
 		<servlet-name>QueTableServlet</servlet-name>
 		<servlet-class>com.queuetable.controller.QueTableServlet</servlet-class>
 	</servlet>
