商城後台完成串接(WebContent/back-end/shopBackEndMainEntry.jsp)

--- a/CEA101G5/WebContent/WEB-INF/web.xml
+++ b/CEA101G5/WebContent/WEB-INF/web.xml
@@ -198,6 +198,15 @@
 	</servlet-mapping>
 	
 	<servlet>
+		<servlet-name>OrderDetailServlet</servlet-name>
+		<servlet-class>com.orderdetail.controller.OrderDetailServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>OrderDetailServlet</servlet-name>
+		<url-pattern>/shop/orderdetail.do</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
 		<servlet-name>ProductCategoryServlet</servlet-name>
 		<servlet-class>com.productcategory.controller.ProductCategoryServlet</servlet-class>
 	</servlet>
