--- a/CEA101G5/WebContent/WEB-INF/web.xml
+++ b/CEA101G5/WebContent/WEB-INF/web.xml
@@ -412,4 +412,18 @@
 		<dispatcher>ERROR</dispatcher>
 		<dispatcher>ASYNC</dispatcher>
 	</filter-mapping>
+	
+	<error-page>
+	<error-code>400</error-code>
+	<location>/front-store-end/front/errorpage.jsp</location>
+	</error-page>
+	<error-page>
+	<error-code>404</error-code>
+	<location>/front-store-end/front/errorpage.jsp</location>
+	</error-page>
+	<error-page>
+	<error-code>500</error-code>
+	<location>/front-store-end/front/errorpage.jsp</location>
+	</error-page>
+	
 </web-app>
