--- a/CEA101G5/WebContent/WEB-INF/web.xml
+++ b/CEA101G5/WebContent/WEB-INF/web.xml
@@ -413,17 +413,17 @@
 		<dispatcher>ASYNC</dispatcher>
 	</filter-mapping>
 	
-	<error-page>
-	<error-code>400</error-code>
-	<location>/front-customer-end/front/errorpage.jsp</location>
-	</error-page>
-	<error-page>
-	<error-code>404</error-code>
-	<location>/front-customer-end/front/errorpage.jsp</location>
-	</error-page>
-	<error-page>
-	<error-code>500</error-code>
-	<location>/front-customer-end/front/errorpage.jsp</location>
-	</error-page>
+<!-- 	<error-page> -->
+<!-- 	<error-code>400</error-code> -->
+<!-- 	<location>/front-customer-end/front/errorpage.jsp</location> -->
+<!-- 	</error-page> -->
+<!-- 	<error-page> -->
+<!-- 	<error-code>404</error-code> -->
+<!-- 	<location>/front-customer-end/front/errorpage.jsp</location> -->
+<!-- 	</error-page> -->
+<!-- 	<error-page> -->
+<!-- 	<error-code>500</error-code> -->
+<!-- 	<location>/front-customer-end/front/errorpage.jsp</location> -->
+<!-- 	</error-page> -->
 	
 </web-app>
